# zmq-pubsub-testing

./: .gitignore  CMakeLists.txt
bindings/qt/: qtconnectionadapter.h
client1/: CMakeLists.txt  main.cpp
client2/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  config.h  connectionapi.cpp  connectionapi.h  connectionmanager.cpp  connectionmanager.h  logger.h  messagekeys.h  protoutils.h  safequeue.h  uuidhelper.h  wireframe.h  workerinterface.h  zmq_client_manager.cpp  zmq_client_manager.h  zmq_common.h  zmqconnectionapi.cpp  zmqconnectionapi.h  zmqconnectionmanager.cpp  zmqconnectionmanager.h  zmqworker.cpp  zmqworker.h
common/adapters/: qtconnectionadapter.h
common/generated-c/: broker.pb-c.c  broker.pb-c.h  update.pb-c.c  update.pb-c.h
common/proto/: broker.proto  update.proto
inspector/: CMakeLists.txt  datamodel.h  hexutils.h  inspectorworker.cpp  inspectorworker.h  main.cpp  mainwindow.cpp  mainwindow.h  packettablemodel.cpp  packettablemodel.h  protoutils.h
server/: CMakeLists.txt  main.cpp  zmq_broker.cpp  zmq_broker.h  zmqbroker.cpp  zmqbroker.h
sniffer/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  any_payload_roundtrip_test.cpp  message_size_limit_test.cpp  reply_to_sender_context_test.cpp  request_reply_test.cpp  safequeue_test.cpp  shutdown_test.cpp  wildcard_subscription_test.cpp
tests/support/: test_helpers.h
tests/throughput/: throughput_bench.cpp
